--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌌 Advanced Quantum Chaos Simulator 🔮</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r155/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r17/Stats.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -106,6 +108,7 @@
             width: 20px;
             height: 20px;
             border-radius: 50%;
+            background: #00ff88;
             background: #00ff88;
             cursor: pointer;
             border: none;
@@ -275,6 +278,98 @@
         .entanglement {
             color: #8b5cf6;
         }
+
+        .experiment-panel {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            z-index: 100;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 15px;
+            border-radius: 10px;
+            border: 1px solid #ff6b6b;
+            max-width: 400px;
+        }
+
+        .experiment-panel h3 {
+            margin-bottom: 10px;
+            color: #ff6b6b;
+        }
+
+        .experiment-controls {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .experiment-btn {
+            background: rgba(255, 107, 107, 0.2);
+            border: 1px solid #ff6b6b;
+            padding: 8px 15px;
+            border-radius: 20px;
+            color: #ff6b6b;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-size: 0.8em;
+        }
+
+        .experiment-btn:hover {
+            background: rgba(255, 107, 107, 0.4);
+        }
+
+        .quantum-state-panel {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            z-index: 100;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 15px;
+            border-radius: 10px;
+            border: 1px solid #8b5cf6;
+            max-width: 350px;
+        }
+
+        .quantum-state-panel h3 {
+            margin-bottom: 10px;
+            color: #8b5cf6;
+        }
+
+        .quantum-info {
+            font-size: 0.8em;
+            line-height: 1.4;
+        }
+
+        .notification {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: rgba(0, 255, 136, 0.9);
+            color: #000;
+            padding: 15px;
+            border-radius: 10px;
+            z-index: 1000;
+            transform: translateX(400px);
+            transition: transform 0.3s ease;
+        }
+
+        .notification.show {
+            transform: translateX(0);
+        }
+
+        .particle-trail {
+            position: absolute;
+            pointer-events: none;
+            z-index: 50;
+        }
+
+        .trail-dot {
+            position: absolute;
+            width: 2px;
+            height: 2px;
+            background: #00ff88;
+            border-radius: 50%;
+            opacity: 0.6;
+        }
     </style>
 </head>
 <body>
@@ -298,6 +393,14 @@
                     <label for="gravFieldSlider">🌍 Grav Field</label>
                     <input type="range" id="gravFieldSlider" class="slider" min="0" max="1" step="0.05" value="0.5">
                 </div>
+                <div class="control-group">
+                    <label for="temperatureSlider">🌡️ Temperature</label>
+                    <input type="range" id="temperatureSlider" class="slider" min="0" max="1000" step="10" value="300">
+                </div>
+                <div class="control-group">
+                    <label for="pressureSlider">💨 Pressure</label>
+                    <input type="range" id="pressureSlider" class="slider" min="0" max="10" step="0.1" value="1.0">
+                </div>
             </div>
             
             <div class="advanced-controls">
@@ -317,6 +420,8 @@
                 <button class="button" onclick="resetSimulation()">🔄 Reset</button>
                 <button class="button" onclick="toggleEntanglement()">⚛️ Toggle Entanglement</button>
                 <button class="button" onclick="toggleAudio()">🎵 Audio</button>
+                <button class="button" onclick="toggleParticleTrails()">🌊 Trails</button>
+                <button class="button" onclick="toggleQuantumState()">🔬 Quantum State</button>
             </div>
         </div>
 
@@ -330,6 +435,33 @@
             <div class="fields">🌍 Grav Field: <span id="gravField">0.5</span></div>
             <div class="entanglement">🔗 Entangled: <span id="entangledCount">0</span></div>
             <div class="field-strength">🌊 Quantum Field: <span id="quantumField">0.7</span></div>
+            <div class="field-strength">🌡️ Temperature: <span id="temperature">300</span>K</div>
+            <div class="field-strength">💨 Pressure: <span id="pressure">1.0</span>atm</div>
+            <div class="field-strength">⚡ Energy: <span id="totalEnergy">0</span>J</div>
+            <div class="field-strength">🔬 Entropy: <span id="entropy">0</span></div>
+        </div>
+
+        <div class="experiment-panel">
+            <h3>🧪 Quantum Experiments</h3>
+            <div class="experiment-controls">
+                <button class="experiment-btn" onclick="runDoubleSlitExperiment()">🔬 Double Slit</button>
+                <button class="experiment-btn" onclick="runBellTest()">🔔 Bell Test</button>
+                <button class="experiment-btn" onclick="runQuantumTunneling()">🌊 Tunneling</button>
+                <button class="experiment-btn" onclick="runParticleCollision()">💥 Collision</button>
+                <button class="experiment-btn" onclick="runQuantumTeleportation()">🚀 Teleportation</button>
+                <button class="experiment-btn" onclick="runSchrodingerCat()">🐱 Schrödinger's Cat</button>
+            </div>
+        </div>
+
+        <div class="quantum-state-panel">
+            <h3>⚛️ Quantum State</h3>
+            <div class="quantum-info">
+                <div>Superposition: <span id="superpositionCount">0</span></div>
+                <div>Collapsed: <span id="collapsedCount">0</span></div>
+                <div>Wave Function: <span id="waveFunctionState">Active</span></div>
+                <div>Uncertainty: <span id="uncertainty">0.00</span></div>
+                <div>Coherence: <span id="coherence">0.00</span></div>
+            </div>
         </div>
 
         <canvas id="canvas"></canvas>
@@ -338,6 +470,10 @@
             <div>Initializing Quantum Field...</div>
             <div style="font-size: 0.5em; margin-top: 10px;">Connecting to the multiverse...</div>
         </div>
+    </div>
+
+    <div class="notification" id="notification">
+        <div id="notificationText"></div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
