🚀 COMMIT 9: Advanced Statistics & Real-time Monitoring - Added comprehensive statistics display for strong/weak forces, spacetime curvature coordinates, spin network count, and enhanced real-time monitoring with precision formatting! 📊🔬⚛️

--- a/public/index.html
+++ b/public/index.html
@@ -451,6 +451,10 @@
             <div class="field-strength">💨 Pressure: <span id="pressure">1.0</span>atm</div>
             <div class="field-strength">⚡ Energy: <span id="totalEnergy">0</span>J</div>
             <div class="field-strength">🔬 Entropy: <span id="entropy">0</span></div>
+            <div class="field-strength">🔴 Strong Force: <span id="strongForce">0.8</span></div>
+            <div class="field-strength">🟡 Weak Force: <span id="weakForce">0.4</span></div>
+            <div class="field-strength">🌌 Spacetime: <span id="spacetimeCurvature">(0,0,0)</span></div>
+            <div class="field-strength">🕸️ Spin Networks: <span id="spinNetworks">0</span></div>
         </div>
 
         <div class="experiment-panel">
